# helmholtz-cage-driver

./: .gitignore  LICENSE  README.md
documentation/: bibliography.bib  main.tex
documentation/figures/: block_diagram.excalidraw  emb-class-diagram.drawio
hardware/ltspice_simulations/: AmpOpDriver.asc  AmpOpDriverBipolar.asc  AmpOpDriverBipolarBJT_v3.asc  AmpOpDriverBipolarBJT_v4.asc  AmpOpDriverBipolar_v2.asc  AmpOpDriverBipolar_v3.asc  PWM_filter.asc
software/hc_driver/: CMakeLists.txt  sdkconfig
software/hc_driver/app/Application/: Application.cpp  CMakeLists.txt
software/hc_driver/app/Application/include/: Application.hpp
software/hc_driver/components/ClockCalendar/: CMakeLists.txt  Calendar.cpp  Clock.cpp  ClockCalendar.cpp
software/hc_driver/components/ClockCalendar/include/: Calendar.hpp  Clock.hpp  ClockCalendar.hpp
software/hc_driver/components/CoilDriver/: CMakeLists.txt  CoilDriver.cpp
software/hc_driver/components/CoilDriver/include/: CoilDriver.hpp
software/hc_driver/components/CurrentSensor/: CMakeLists.txt  CurrentSensor.cpp
software/hc_driver/components/CurrentSensor/include/: CurrentSensor.hpp
software/hc_driver/components/CurrentSource/: CMakeLists.txt  CurrentSource.cpp
software/hc_driver/components/CurrentSource/include/: CurrentSource.hpp
software/hc_driver/components/Host/: CMakeLists.txt  Host.cpp
software/hc_driver/components/Host/include/: Host.hpp
software/hc_driver/components/HostMobile/: CMakeLists.txt  HostMobile.cpp
software/hc_driver/components/HostMobile/include/: HostMobile.hpp
software/hc_driver/components/HostPC/: CMakeLists.txt  HostPC.cpp
software/hc_driver/components/HostPC/include/: HostPC.hpp
software/hc_driver/components/Logger/: CMakeLists.txt  Logger.cpp
software/hc_driver/components/Logger/include/: Logger.hpp
software/hc_driver/components/Queue/: CMakeLists.txt  Queue.cpp
software/hc_driver/components/Queue/include/: Queue.hpp
software/hc_driver/main/: CMakeLists.txt  hc_driver.cpp
software/hc_driver/mcu_drivers/uart_cxx/: CMakeLists.txt  uart_cxx.cpp
software/hc_driver/mcu_drivers/uart_cxx/include/: uart_cxx.hpp
software/hc_driver/tasks/application_tasks/: CMakeLists.txt
software/hc_driver/tasks/application_tasks/include/: application_tasks.hpp
software/hc_driver/tasks/command_handler_task/: CMakeLists.txt  command_handler_task.cpp
software/hc_driver/tasks/command_handler_task/include/: command_handler_task.hpp
software/hc_driver/tasks/heartbeat/: CMakeLists.txt  heartbeat.cpp
software/hc_driver/tasks/heartbeat/include/: heartbeat.hpp
software/hc_driver/tasks/tasks_api/: CMakeLists.txt  tasks_api.cpp
software/hc_driver/tasks/tasks_api/include/: tasks_api.hpp
software/hc_driver/tasks/testing_task/: CMakeLists.txt  testing_task.cpp
software/hc_driver/tasks/testing_task/include/: testing_task.hpp
software/host_pc/: CMakeLists.txt
software/host_pc/src/: CMakeLists.txt  main.cpp
software/host_pc/src/App/: App.cpp  CMakeLists.txt
software/host_pc/src/App/include/: App.hpp
software/host_pc/src/libs/: CMakeLists.txt
software/host_pc/src/libs/ClockCalendar/: CMakeLists.txt  ClockCalendar.cpp
software/host_pc/src/libs/ClockCalendar/include/: Calendar.hpp  Clock.hpp  ClockCalendar.hpp
software/host_pc/src/libs/Logger/: CMakeLists.txt  Logger.cpp
software/host_pc/src/libs/Logger/include/: Logger.hpp
software/host_pc/src/libs/Queue/: CMakeLists.txt  Queue.cpp
software/host_pc/src/libs/Queue/include/: Queue.hpp
software/host_pc/src/libs/SerialPort/: CMakeLists.txt  SerialPort.cpp
software/host_pc/src/libs/SerialPort/include/: SerialPort.hpp
